# orderbook-arbtraguer

./: .gitignore  README.md  pyproject.toml
cli/: api.py  fetch.py  fetch_monitor.py  get_balance_position.py  get_order_history.py  get_order_state.py  order.py  order_status_stream_demo.py  refresh_position_demo.py  test.py
configs/: api_config.common.json  common_config.json  order_config.common.json
cross_arbitrage/api/: api.py  collect_data.py  config.py  model.py
cross_arbitrage/config/: account.py  constant.py  log.py  network.py  redis.py  symbol.py
cross_arbitrage/exchange/: binance_usdm_ws.py  okex_ws.py
cross_arbitrage/fetch/: agg_orderbook.py  config.py  fetch_funding_rate.py  fetch_orderbook.py
cross_arbitrage/fetch/utils/: common.py  redis.py
cross_arbitrage/order/: check_exchange_status.py  config.py  globals.py  market.py  model.py  order.py  order_book.py  order_status.py  position_status.py  process_threshold.py  signal_dealer.py  threshold.py
cross_arbitrage/utils/: cache.py  ccxt_patch.py  color.py  context.py  csv.py  decorator.py  exchange.py  logger.py  order.py  symbol_mapping.py
tests/fetch/: test_config.py  test_ogg.py
tests/fixtures/: common_config.json  order_config.json  symbols.json
tests/order/: test_cancel_order.py  test_exchange_status.py  test_global.py  test_order_utils.py
tests/utils/: test_csv_model.py
